--- a/components/Testimonials/Testimonials.less
+++ b/components/Testimonials/Testimonials.less
@@ -100,14 +100,16 @@
     .left-button,
     .right-button {
       padding: 0;
+      height: 6rem;
+      width: 6rem;
     }
 
     .left-button {
-      margin-left: -5rem;
+      margin-left: -3rem;
     }
 
     .right-button {
-      margin-right: -5rem;
+      margin-right: -3rem;
     }
   }
 }
