--- a/css/index.css
+++ b/css/index.css
@@ -315,7 +315,7 @@ a {
   align-items: center;
   margin-top: 3rem;
   padding: 3rem;
-  min-width: 100vh;
+  min-height: 100vh;
   text-align: center;
 }
 .features .feature {
@@ -323,11 +323,13 @@ a {
   margin-bottom: 1rem;
   padding: 4rem;
   margin: 1rem;
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.08);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+}
+.features .feature--icon {
+  width: 50%;
 }
 @media (max-width: 500px) {
   .features .feature {
@@ -425,11 +427,13 @@ a {
   .testimonials .left-button,
   .testimonials .right-button {
     padding: 0;
+    height: 6rem;
+    width: 6rem;
   }
   .testimonials .left-button {
-    margin-left: -5rem;
+    margin-left: -3rem;
   }
   .testimonials .right-button {
-    margin-right: -5rem;
+    margin-right: -3rem;
   }
 }
